--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 </head>
 
 <body>
-  <h1>Library</h1>
-  <button id="add-btn" class="btn">Add book</button>
-  <div id="library-container">
-
+  <div class="main">
+    <div class="container">
+      <div class="title-wrapper text-center">
+        <h1>Mind Library</h1>
+      </div>
+      <div class="sub-title-lib flex space-between">
+        <h2 class="color-primary">Your Books</h2>
+        <div id="add-btn" class="btn">Add book</div>
+      </div>
+      <div id="library-container">
+      </div>
+    </div>
   </div>
   <dialog id="dialog-form">
     <form method="dialog">
