Style add book button

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
       <div class="title-wrapper text-center">
         <h1>Mind Library</h1>
       </div>
-      <div class="sub-title-lib flex space-between">
-        <h2 class="color-primary">Your Books</h2>
-        <div id="add-btn" class="btn">Add book</div>
+      <div class="sub-title-lib flex space-between center ">
+        <h2 class="primary-color">Your Books</h2>
+        <div id="add-btn" class="icon-btn-primary round-corners-1x">
+          <img src="icon/book-plus.svg" alt="">
+          Add book
+        </div>
       </div>
       <div id="library-container">
       </div>
