Refactor css rules

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
   <div class="main">
     <div class="container">
-      <div class="title-wrapper text-center">
+      <div class="title-wrapper text-center ">
         <h1>Mind Library</h1>
       </div>
-      <div class="sub-title-lib flex space-between center ">
+      <div class="lib-header flex space-between y-center ">
         <h2 class="primary-color">Your Books</h2>
-        <div id="add-btn" class="icon-btn-primary round-corners-1x">
+        <div id="add-btn" class="btn btn-primary round-corners-1x flex y-center">
           <img src="icon/book-plus.svg" alt="">
           Add book
         </div>
