Add icon to library header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <h1><span class="primary-color">Wave</span> Library</h1>
       </div>
       <div class="lib-header flex space-between y-center ">
-        <h2>Your Books</h2>
+        <div class="flex y-center">
+          <img src="icons/book-open.svg" height="40px">
+          <h2>Your Books</h2>
+        </div>
         <div id="add-btn" class="btn btn-primary round-corners-1x flex y-center">
           <img src="icons/book-plus.svg" alt="">
           Add book
